Fix: The calculated CSS was pushing the bottom off screen

--- a/src/assets/less/main_window.less
+++ b/src/assets/less/main_window.less
@@ -174,7 +174,7 @@ html, body {
     position: relative;
 
     .embedded-player {
-      height: calc(~"100vh -" (@title-bar-height + @border-width * 2));
+      height: 100%;
       display: flex;
       transition: opacity 0.4s linear;
       position: relative;
